<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >

	<ScrollView android:id="@+id/onboarding_4" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >



			<RelativeLayout android:id="@+id/page_onboarding_4_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg__onboarding_4_ek2"
					android:background="@drawable/_bg__onboarding_4_ek2_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="360dp"
					android:layout_height="800dp" />

				<ImageView android:id="@+id/__img___freebg_onboarding_4"
					android:src="@drawable/__img___freebg_onboarding_4"
					android:contentDescription="__img___freebg_onboarding_4"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="360dp"
					android:layout_height="800dp" />


				<RelativeLayout android:id="@+id/headergroup__avoid_making_changes_"
					android:layout_marginTop="0dp"
					android:layout_marginStart="0dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/_bg__headergroup__avoid_making_changes__ek1"
						android:background="@drawable/_bg__headergroup__avoid_making_changes__ek1_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="360dp"
						android:layout_height="73dp" />


					<RelativeLayout android:id="@+id/notificationbar"
						android:layout_marginTop="0dp"
						android:layout_marginStart="0dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<View   android:id="@+id/_bg__notificationbar_ek1"
							android:background="@drawable/_bg__notificationbar_ek1_shape"
							 android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:layout_width="360dp"
							android:layout_height="20dp" />

						<TextView android:id="@+id/_1_42"
							android:textSize="12sp"
							android:textColor="@color/_bg__onboarding_4_ek2_color"
							android:layout_marginLeft="16dp"
							android:layout_marginTop="2dp"
							android:layout_width="31.2dp"
							android:layout_height="17.2dp"
							android:text="@string/_1_42_string"
							 />


						<RelativeLayout android:id="@+id/frame_3"
							android:layout_marginTop="2dp"
							android:layout_marginStart="304dp"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							>

							<View   android:id="@+id/_bg__frame_3_ek1"
								android:background="@drawable/_bg__frame_3_ek1_shape"
								 android:layout_marginStart="0dp"
								android:layout_marginTop="0dp"
								android:layout_width="40dp"
								android:layout_height="16dp" />


							<RelativeLayout android:id="@+id/signal_cellular_4_bar_black_24dp"
								android:layout_marginTop="0dp"
								android:layout_marginStart="0dp"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								>

								<View   android:id="@+id/_bg__signal_cellular_4_bar_black_24dp_ek1"
									android:background="@drawable/_bg__signal_cellular_4_bar_black_24dp_ek1_shape"
									 android:layout_marginStart="0dp"
									android:layout_marginTop="0dp"
									android:layout_width="16dp"
									android:layout_height="16dp" />

								<ImageView android:id="@+id/vector"
									android:src="@drawable/vector"
									android:contentDescription="vector"
									 android:layout_marginStart="0dp"
									android:layout_marginTop="0dp"
									android:layout_width="16dp"
									android:layout_height="16dp" />

								<ImageView android:id="@+id/vector_ek1"
									android:src="@drawable/vector_ek1"
									android:contentDescription="vector_ek1"
									 android:layout_marginStart="1dp"
									android:layout_marginTop="1dp"
									android:layout_width="13.33dp"
									android:layout_height="13.33dp" />

							</RelativeLayout>


							<RelativeLayout android:id="@+id/battery_full_black_24dp"
								android:layout_marginTop="0dp"
								android:layout_marginStart="24dp"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								>

								<View   android:id="@+id/_bg__battery_full_black_24dp_ek1"
									android:background="@drawable/_bg__battery_full_black_24dp_ek1_shape"
									 android:layout_marginStart="0dp"
									android:layout_marginTop="0dp"
									android:layout_width="16dp"
									android:layout_height="16dp" />

								<ImageView android:id="@+id/vector_ek2"
									android:src="@drawable/vector_ek2"
									android:contentDescription="vector_ek2"
									 android:layout_marginStart="0dp"
									android:layout_marginTop="0dp"
									android:layout_width="16dp"
									android:layout_height="16dp" />

								<ImageView android:id="@+id/vector_ek3"
									android:src="@drawable/vector_ek3"
									android:contentDescription="vector_ek3"
									 android:layout_marginStart="5dp"
									android:layout_marginTop="1dp"
									android:layout_width="6.67dp"
									android:layout_height="13.33dp" />

							</RelativeLayout>

						</RelativeLayout>

					</RelativeLayout>


					<RelativeLayout android:id="@+id/header"
						android:layout_marginTop="20dp"
						android:layout_marginStart="0dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<View   android:id="@+id/_bg__header_ek1"
							android:background="@drawable/_bg__header_ek1_shape"
							 android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:layout_width="360dp"
							android:layout_height="53dp" />


						<RelativeLayout android:id="@+id/businessdetails"
							android:layout_marginTop="16dp"
							android:layout_marginStart="12dp"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							>

							<View   android:id="@+id/_bg__businessdetails_ek1"
								android:background="@drawable/_bg__businessdetails_ek1_shape"
								 android:layout_marginStart="0dp"
								android:layout_marginTop="0dp"
								android:layout_width="336dp"
								android:layout_height="21dp" />


							<RelativeLayout android:id="@+id/businessname"
								android:layout_marginTop="0dp"
								android:layout_marginStart="0dp"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								>

								<View   android:id="@+id/_bg__businessname_ek1"
									android:background="@drawable/_bg__frame_2_ek1_shape"
									 android:layout_marginStart="0dp"
									android:layout_marginTop="0dp"
									android:layout_width="336dp"
									android:layout_height="21dp" />

								<TextView android:id="@+id/greetings____"
									android:textStyle="bold"
									android:textSize="18sp"
									android:textColor="@color/_bg__onboarding_4_ek2_color"
									android:layout_marginLeft="0dp"
									android:layout_marginTop="0dp"
									android:layout_width="116.8dp"
									android:layout_height="26.8dp"
									android:text="@string/greetings_____string"
									 />

							</RelativeLayout>

						</RelativeLayout>

					</RelativeLayout>

				</RelativeLayout>


				<RelativeLayout android:id="@+id/_2__outlined_a__inactive"
					android:layout_marginTop="344dp"
					android:layout_marginStart="16dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/_bg___2__outlined_a__inactive_ek1"
						android:background="@drawable/_bg__onboarding_3_ek2_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="328dp"
						android:layout_height="72dp" />

					<EditText
						android:id="@+id/text_area"
						android:layout_width="328dp"
						android:layout_height="wrap_content"
						android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:background="@drawable/text_field_outline"

					/>


					<TextView android:id="@+id/____input_text"
						android:textSize="16sp"
						android:textColor="@color/_bg__bg_img2_1_ek2_color"
						android:layout_marginLeft="16dp"
						android:layout_marginTop="16dp"
						android:layout_width="124.6dp"
						android:layout_height="28.6dp"
						android:text="@string/____input_text_string"
						 />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/group_159"
					android:layout_marginTop="704dp"
					android:layout_marginStart="0dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/_bg__group_159_ek1"
						android:background="@drawable/_bg__android_large___1_ek2_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="-704dp"
						android:layout_width="360dp"
						android:layout_height="96dp" />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/group_158"
					android:layout_marginTop="113dp"
					android:layout_marginStart="100dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/_bg__group_158_ek1"
						android:background="@drawable/_bg__android_large___1_ek2_shape"
						 android:layout_marginStart="-100dp"
						android:layout_marginTop="-113dp"
						android:layout_width="160dp"
						android:layout_height="160dp" />

					<View   android:id="@+id/ellipse_1"
						android:background="@drawable/ellipse_1_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="160dp"
						android:layout_height="160dp" />


					<RelativeLayout android:id="@+id/group_157"
						android:layout_marginTop="36dp"
						android:layout_marginStart="20dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<View   android:id="@+id/_bg__group_157_ek1"
							android:background="@drawable/_bg__android_large___1_ek2_shape"
							 android:layout_marginStart="-120dp"
							android:layout_marginTop="-149dp"
							android:layout_width="120dp"
							android:layout_height="88dp" />


						<RelativeLayout android:id="@+id/upload_icon"
							android:layout_marginTop="0dp"
							android:layout_marginStart="36dp"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							>

							<View   android:id="@+id/_bg__upload_icon_ek1"
								android:background="@drawable/ellipse_1_shape"
								 android:layout_marginStart="0dp"
								android:layout_marginTop="0dp"
								android:layout_width="48dp"
								android:layout_height="48dp" />

							<ImageView android:id="@+id/vector_ek4"
								android:src="@drawable/vector_ek4"
								android:contentDescription="vector_ek4"
								 android:layout_marginStart="8dp"
								android:layout_marginTop="8dp"
								android:layout_width="32dp"
								android:layout_height="32dp" />

						</RelativeLayout>

						<TextView android:id="@+id/upload_your_picture"
							android:layout_gravity="center_horizontal|center"
							android:gravity="center"
							android:textSize="14sp"
							android:textColor="@color/upload_your_picture_color"
							android:layout_marginLeft="-2dp"
							android:layout_marginTop="56dp"
							android:layout_width="121.4dp"
							android:layout_height="36.4dp"
							android:text="@string/upload_your_picture_string"
							 />

					</RelativeLayout>

				</RelativeLayout>

<!--				<ImageView-->
<!--					android:id="@+id/savedup"-->
<!--					android:layout_width="360dp"-->
<!--					android:layout_height="96dp"-->
<!--					android:layout_marginStart="0dp"-->
<!--					android:layout_marginTop="0dp"-->
<!--					android:contentDescription="frame_86"-->
<!--					android:src="@drawable/savedup" />-->

			</RelativeLayout>
		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>